# algorithms

./: CMakeLists.txt  README.md
include/core/: check.hpp  node.hpp
include/sort/: bitarray.hpp  bitsort.hpp
include/tree/: avl.hpp
test/: CMakeLists.txt  bitarray_test.cpp  bitsort_test.cpp  s_node_test.cpp
